# patch-cc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CONDUCT.md  INTERNALS.md  PLAYBOOK.md
src/patch_cc/: __init__.py  cache.py  cli.py  doctor.py  locate.py  menu.py  patcher.py  ui.py
src/patch_cc/bun/: __init__.py  blob.py  container.py  elf.py  errors.py  macho.py
src/patch_cc/patches/: __init__.py  agents.py  base.py  chrome.py  output.py  streaming.py  thinking.py
