[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patch-cc"
version = "0.1.2"
description = "Interactive patcher for the Claude Code native binary"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "André Freire Ferreira", email = "anfreire.dev@gmail.com" },
]
keywords = ["claude", "claude-code", "patch", "bun", "cli", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.7",
    "blessed>=1.47.0",
    "lief>=0.15; sys_platform == 'darwin'",
]

[project.scripts]
patch-cc = "patch_cc.cli:main"

[project.urls]
Homepage = "https://github.com/anfreire/patch-cc"
Repository = "https://github.com/anfreire/patch-cc"
Issues = "https://github.com/anfreire/patch-cc/issues"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.mypy]
python_version = "3.11"

# lief is a macOS-only dependency, so it is absent when checking on Linux.
[[tool.mypy.overrides]]
module = "lief.*"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/patch_cc"]
